--- a/FinalProjectVR/Views/Shared/_Layout.cshtml
+++ b/FinalProjectVR/Views/Shared/_Layout.cshtml
@@ -81,6 +81,9 @@
                                             <a href="~/Pricing/Index" class="text-hover-animaiton">Qiymətlərimiz</a>
                                         </li>
                                         <li>
+                                            <a href="~/Pricing/Order/" class="text-hover-animaiton">Paketləin Alışı</a>
+                                        </li>
+                                        <li>
                                             <a href="~/FAQ/Index" class="text-hover-animaiton">FAQ</a>
                                         </li>
                                     </ul>
