--- a/FinalProjectVR/Views/Shared/Components/Contact/Default.cshtml
+++ b/FinalProjectVR/Views/Shared/Components/Contact/Default.cshtml
@@ -1,7 +1,4 @@
-﻿
-
-
-<section class="container">
+﻿<section class="container">
     <div class="contact-info">
         <div class="left-info" data-aos="fade-right">
             <div class="content">
