--- a/FinalProjectVR/Views/ContactUs/Index.cshtml
+++ b/FinalProjectVR/Views/ContactUs/Index.cshtml
@@ -59,5 +59,5 @@
 <!--End form -->
 
 <div class="ak-height-125 ak-height-lg-80"></div>
-@await Component.InvokeAsync("Contact")
+@Html.Partial("_ContactPartialView")
 
