--- a/FinalProjectVR/Views/ContactUs/_ContactPartialView.cshtml
+++ b/FinalProjectVR/Views/ContactUs/_ContactPartialView.cshtml
@@ -37,8 +37,8 @@
                         </svg>
                     </div>
                     <div>
-                        <p>example@email.com</p>
-                        <p>crasauto@email.com</p>
+                        <p>Vuqarr32@gmail.com</p>
+                        <p>VuqarRehimazde@gmail.com</p>
                     </div>
                 </div>
             </div>
@@ -54,8 +54,8 @@
                     </div>
                     <div>
                         <p>
-                            901 N Pitt Str., Suite 170 <br>
-                            Alexandria, NY, USA
+                            2944A Xudu Məmmədov, Bakı <br>
+                            Akkord - Ugur
                         </p>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                         </svg>
                     </div>
                     <div>
-                        <p>(406) 555-0120</p>
+                        <p>(+994)51-411-21-03  </p>
                     </div>
                 </div>
             </div>
