--- a/FinalProjectVR/Views/Team/Index.cshtml
+++ b/FinalProjectVR/Views/Team/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿
+@model List<DTOLayer.TeamDTOs>
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -10,21 +12,17 @@
             <h3 class="page-title">Komandamız</h3>
             <div class="d-flex gap-2 align-items-center">
                 <p>Ana Səyfə /</p>
-                <a href="#">Komandamız</a>
+                <a href="~/Team/Index">Komandamız</a>
             </div>
         </div>
         <div class="primary-color-border"></div>
     </div>
-    <!-- End common page title  -->
-    <!-- Start ceo -->
     <div class="ak-height-75 ak-height-lg-75"></div>
-    <!-- End ceo -->
-    <!-- Start Boder -->
-    <!-- End Boder -->
-    <!-- Start Member-->
     <div class="container">
         <div class="all-members">
             <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-2 row-cols-1 g-4">
+                @foreach(var item in Model)
+                {
                 <div class="col">
                     <div class="member-card" data-aos="fade-up" data-aos-delay="0">
                         <span href="team-single.html">
@@ -33,12 +31,12 @@
                         <div class="member-info">
                             <div class="member-title">
                                 <span class="title">
-                                    Darrell T. Beedle
+                                    @item.Name @item.Surname
                                 </span>
-                                <p class="desp">Lead Mechanic</p>
+                                <p class="desp">@item.Position</p>
                             </div>
                             <div class="member-info-social">
-                                <a href="https://bd.linkedin.com/" class="icon">
+                                <a href="@item.LinkedInUrl" class="icon">
                                 <img src="~/web-cras-three.vercel.app/assets/img/linkedinicon.svg"
                                          alt="" />
                                 </a>
@@ -46,104 +44,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="member-card" data-aos="fade-up" data-aos-delay="50">
-                        <a href="team-single.html">
-                        <img src="~/web-cras-three.vercel.app/assets/img/member_2.jpg" class="member-img ak-bg" alt="..." />
-                        </a>
-                        <div class="member-info">
-                            <div class="member-title">
-                                <span class="title">
-                                    Michael Jack
-                                </span>
-                                <p class="desp">Service Advisor</p>
-                            </div>
-                            <div class="member-info-social">
-                                <a href="https://bd.linkedin.com/" class="icon">
-                                <img src="~/web-cras-three.vercel.app/assets/img/linkedinicon.svg"
-                                         alt="" />
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="member-card" data-aos="fade-up" data-aos-delay="100">
-                        <a href="team-single.html">
-                        <img src="~/web-cras-three.vercel.app/assets/img/member_3.jpg" class="member-img ak-bg" alt="..." />
-                        </a>
-                        <div class="member-info">
-                            <div class="member-title">
-                                <a href="team-single.html" class="title">Cathy Sparkman</a>
-                                <p class="desp">Diagnostic Technician</p>
-                            </div>
-                            <div class="member-info-social">
-                                <a href="https://bd.linkedin.com/" class="icon">
-                                <img src="~/web-cras-three.vercel.app/assets/img/linkedinicon.svg"
-                                         alt="" />
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="member-card" data-aos="fade-up" data-aos-delay="0">
-                        <a href="team-single.html">
-                        <img src="~/web-cras-three.vercel.app/assets/img/member_4.jpg" class="member-img ak-bg" alt="..." />
-                        </a>
-                        <div class="member-info">
-                            <div class="member-title">
-                                <a href="team-single.html" class="title">Charles G. Macdonald</a>
-                                <p class="desp">System Technician</p>
-                            </div>
-                            <div class="member-info-social">
-                                <a href="https://bd.linkedin.com/" class="icon">
-                                <img src="~/web-cras-three.vercel.app/assets/img/linkedinicon.svg"
-                                         alt="" />
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="member-card" data-aos="fade-up" data-aos-delay="50">
-                        <a href="team-single.html">
-                        <img src="~/web-cras-three.vercel.app/assets/img/member_5.jpg" class="member-img ak-bg" alt="..." />
-                        </a>
-                        <div class="member-info">
-                            <div class="member-title">
-                                <a href="team-single.html" class="title">Anthony M. Lass</a>
-                                <p class="desp">Systems Specialist</p>
-                            </div>
-                            <div class="member-info-social">
-                                <a href="https://www.facebook.com/" class="icon">
-                                <img src="~/web-cras-three.vercel.app/assets/img/linkedinicon.svg"
-                                         alt="..." />
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="col">
-                    <div class="member-card" data-aos="fade-up" data-aos-delay="100">
-                        <a href="team-single.html">
-                        <img src="~/web-cras-three.vercel.app/assets/img/member_6.jpg" class="member-img ak-bg" alt="..." />
-                        </a>
-                        <div class="member-info">
-                            <div class="member-title">
-                                <a href="team-single.html" class="title">Tyra Crawford</a>
-                                <p class="desp">Lead Mechanic</p>
-                            </div>
-                            <div class="member-info-social">
-                                <a href="https://www.facebook.com/" class="icon">
-                                <img src="~/web-cras-three.vercel.app/assets/img/linkedinicon.svg"
-                                         alt="..." />
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                    }
             </div>
         </div>
     </div>
