--- a/FinalProjectVR/Views/Shared/_Layout.cshtml
+++ b/FinalProjectVR/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
                                     <a href="~/Team/Index" class="text-hover-animaiton">Komandamız</a>
                                 </li>
                                 <li class="menu-item-has-children">
-                                    <a href="#" class="text-hover-animaiton">Rezervasya</a>
+                                    <a href="~/Appointment/Index" class="text-hover-animaiton">Rezervasya</a>
                                     <ul>
                                         <li>
                                             <a href="~/Appointment/Index" class="text-hover-animaiton">Rezervasya</a>
@@ -81,11 +81,14 @@
                                             <a href="~/Pricing/Index" class="text-hover-animaiton">Qiymətlərimiz</a>
                                         </li>
                                         <li>
-                                            <a href="~/Pricing/Order/" class="text-hover-animaiton">Paketləin Alışı</a>
+                                            <a href="~/Pricing/Order/" class="text-hover-animaiton">Abonə Olma</a>
+                                        </li>
+                                        <li>
+                                            <a href="~/Pricing/GetOrderer" class="text-hover-animaiton">Abonəliyin Sorğulanması</a>
                                         </li>
                                         <li>
                                             <a href="~/FAQ/Index" class="text-hover-animaiton">FAQ</a>
-                                        </li>
+                                        </li>     
                                     </ul>
                                 </li>
                                 <li>
@@ -171,18 +174,19 @@
                 </div>
                 <div class="footer-menu-one" data-aos="fade-up" data-aos-delay="50" data-aos-duration="500">
                     <div class="footer-menu">
-                        <a href="#" class="menu-item text-hover-animaiton white">Haqqımızda</a>
-                        <a href="#" class="menu-item text-hover-animaiton white">Xidmətlərimiz</a>
-                        <a href="#" class="menu-item text-hover-animaiton white">Qiymətlərimiz</a>
-                        <a href="#" class="menu-item text-hover-animaiton white">Komandamız</a>
-                        <a href="#" class="menu-item text-hover-animaiton white">Bizmilə Əlaqə</a>
+                        <a href="~/About/Index" class="menu-item text-hover-animaiton white">Haqqımızda</a>
+                        <a href="~/Service/Index" class="menu-item text-hover-animaiton white">Xidmətlərimiz</a>
+                        <a href="~/Pricing/Index" class="menu-item text-hover-animaiton white">Qiymətlərimiz</a>
+                        <a href="~/Team/Index" class="menu-item text-hover-animaiton white">Komandamız</a>
+                        <a href="~/ContactUs/Index" class="menu-item text-hover-animaiton white">Bizmilə Əlaqə</a>
                     </div>
                 </div>
                 <div class="footer-menu-two" data-aos="fade-up" data-aos-delay="100" data-aos-duration="500">
                     <div class="footer-menu">
-                        <a href="appointment.html" class="menu-item text-hover-animaiton white">Rezervasya</a>
-                        <a href="#" class="menu-item text-hover-animaiton white">Blog / Xəbərlər</a>
-                        <a href="faq.html" class="menu-item text-hover-animaiton white">Tez Tez Verilən Sullar</a>
+                        <a href="~/Appointment/Index" class="menu-item text-hover-animaiton white">Rezervasya</a>
+                        <a href="~/Blog/Index" class="menu-item text-hover-animaiton white">Blog / Xəbərlər</a>
+                        <a href="~/Pricing/Order/" class="menu-item text-hover-animaiton white">Paketlərin Alışı</a>
+                        <a href="~/FAQ/Index" class="menu-item text-hover-animaiton white">Tez Tez Verilən Sullar</a>
                     </div>
                 </div>
                 <div class="footer-address" data-aos="fade-up" data-aos-delay="150" data-aos-duration="500">
