--- a/FinalProjectVR/Views/Pricing/Order.cshtml
+++ b/FinalProjectVR/Views/Pricing/Order.cshtml
@@ -44,7 +44,7 @@
                     </div>
                     <div class="type_1">
                      <label for="LicensePlate" class="form-label">Qeydiyyat nişanı</label>
-                     <input type="text" name="LicensePlate" id="LicensePlate">
+                     <input type="text" name="LicensePlate" id="LicensePlate" pattern="[0-9]{2}-[A-Z]{2}-[0-9]{3}" title=" XX-XX-XXX" required>
                      </div>
                 </div>
                     <div class="type_1">
@@ -53,7 +53,7 @@
                      @foreach (var option in ViewBag.PricingOptions)
                      {
                       <option value="@option.Value">@option.Text</option>
-                    }
+                     }
                      </select>
                    </div>
                 <div class="ak-height-40 ak-height-lg-20"></div>
