--- a/FinalProjectVR/Views/Pricing/Index.cshtml
+++ b/FinalProjectVR/Views/Pricing/Index.cshtml
@@ -1,6 +1,4 @@
-﻿
-@* @model List<EntityLayer.Models.Pricing> *@
-@model List<DTOLayer.PricingDTOs>
+﻿@model List<DTOLayer.PricingDTOs>
 
     <!-- Start common page title  -->
     <div class="ak-height-125 ak-height-lg-80"></div>
