--- a/FinalProjectVR/Views/Blog/Index.cshtml
+++ b/FinalProjectVR/Views/Blog/Index.cshtml
@@ -36,10 +36,10 @@
                     </a>
                     <div class="blog-body-info">
                         <p class="blog-text">@item.CreateTime.ToString("dd/MM/yyyy")</p>
-                        <a href="#" class="blog-title">@item.Title</a>
+                        <a href="~/Blog/BlogDetail/@item.Id" class="blog-title">@item.Title</a>
                     </div>
                     <div class="blog-footer-info">
-                        <a href="#" class="more-btn">READ MORE</a>
+                        <a href="~/Blog/BlogDetail/@item.Id" class="more-btn">Davamını Oxu</a>
                     </div>
                 </div>
             </div>
