--- a/FinalProjectVR/Views/Shared/Components/LastBlog/Default.cshtml
+++ b/FinalProjectVR/Views/Shared/Components/LastBlog/Default.cshtml
@@ -12,7 +12,7 @@
             <p class="desp">
                      @Model.Data.Text
             </p>
-            <a href="~/Blog/BlogDetail" class="more-btn">READ MORE</a>
+            <a href="~/Blog/BlogDetail/@Model.Data.Id" class="more-btn">Davamını Oxu</a>
         </div>
         <div class="feature-img" data-aos="fade-left" data-aos-delay="600">
             <img src="~/web-cras-three.vercel.app/assets/img/blog-show.jpg" class="ak-bg" alt="...">
