--- a/FinalProjectVR/wwwroot/web-cras-three.vercel.app/assets/sass/style.css
+++ b/FinalProjectVR/wwwroot/web-cras-three.vercel.app/assets/sass/style.css
@@ -4640,4 +4640,10 @@ kbd {
 .gallery .big {
   grid-column: span 2;
   grid-row: span 2;
-}/*# sourceMappingURL=style.css.map */
+
+
+}
+
+
+
+/*# sourceMappingURL=style.css.map */
