--- a/FinalProjectVR/Areas/Admin/_ViewImports.cshtml
+++ b/FinalProjectVR/Areas/Admin/_ViewImports.cshtml
@@ -1,1 +1,3 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using CoreLayer.DefaultValues
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
