--- a/FinalProjectVR/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -43,10 +43,53 @@
             <hr class="sidebar-divider my-0">
 
             <!-- Nav Item - Dashboard -->
+
             <li class="nav-item">
                 <a class="nav-link" href="index.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="~/Admin/About/Index">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Haqqımızda</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="~/Admin/Blog">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Blog</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="~/Admin/ContactUs">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Bizimlə Əlaqə</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="~/Admin/FAQ/Index">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>FAQ</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="~/Admin/Order/Index">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Sifarişlər</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="~/Admin/Team/Index">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Komandamız</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="~/Admin/Testimonial/Index">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>İstifadəci Geri Dönüşləri</span>
                 </a>
             </li>
 
