Admin Area(Pricing,Service)

--- a/FinalProjectVR/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -52,46 +52,59 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="~/Admin/About/Index">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <i class="fas fa-fw fa-info-circle"></i>
                     <span>Haqqımızda</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="~/Admin/Blog">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <i class="fas fa-fw fa-blog"></i>
                     <span>Blog</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="~/Admin/ContactUs">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <i class="fas fa-fw fa-envelope"></i>
                     <span>Bizimlə Əlaqə</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="~/Admin/FAQ/Index">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <i class="fas fa-fw fa-question-circle"></i>
                     <span>FAQ</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="~/Admin/Order/Index">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <i class="fas fa-fw fa-shopping-cart"></i>
                     <span>Sifarişlər</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="~/Admin/Team/Index">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <i class="fas fa-fw fa-users"></i>
                     <span>Komandamız</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="~/Admin/Testimonial/Index">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <i class="fas fa-fw fa-comments"></i>
                     <span>İstifadəci Geri Dönüşləri</span>
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="~/Admin/Service/Index">
+                    <i class="fas fa-fw fa-cogs"></i>
+                    <span>Xidmətlərimiz</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="~/Admin/Pricing/Index">
+                    <i class="fas fa-fw fa-dollar-sign"></i>
+                    <span>Qiymətlərimiz</span>
+                </a>
+            </li>
+
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
