--- a/FinalProjectVR/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -104,8 +104,15 @@
                     <span>Qiymətlərimiz</span>
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="~/Admin/PriceDescription/Index">
+                    <i class="fas fa-fw fa-dollar-sign"></i>
+                    <span>Qiymet Acılqlamalrı</span>
+                </a>
+            </li>
 
 
+           
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
@@ -267,6 +274,9 @@
 
     <!-- Custom scripts for all pages-->
     <script src="~/web-Admin/js/sb-admin-2.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    @RenderSection("Scripts", false)
 
 </body>
 
