--- a/FinalProjectVR/Views/Pricing/Order.cshtml
+++ b/FinalProjectVR/Views/Pricing/Order.cshtml
@@ -49,7 +49,7 @@
                 </div>
                     <div class="type_1">
                      <label for="PricingId" class="form-label">Paket Seç</label>
-                     <select name="PricingId" id="PricingId" class="form-input">
+                     <select name="PricingId" id="PricingId" class="form-control">
                      @foreach (var option in ViewBag.PricingOptions)
                      {
                       <option value="@option.Value">@option.Text</option>
