--- a/FinalProjectVR/Areas/Admin/Views/ContactUs/Index.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/ContactUs/Index.cshtml
@@ -39,10 +39,57 @@
             </td>
             <td><a href="~/Admin/ContactUs/UpdateContactUs/@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
             <a href="~/Admin/ContactUs/DeleteContactUs/@item.Id" class="btn btn-warning"><i class="fas fa-trash-alt"></i></a>
-            <a href="~/Admin/ContactUs/HardDeleteContactUs/@item.Id" class="btn btn-danger"><i class="fas fa-times"></i></a></td>
+            <a class="btn btn-danger btnDelete" data-id="@item.Id" data-name="@item.Name">
+                <i class="fas fa-trash"></i>
         </tr>
     }
 </table>
 
 
 
+@section Scripts {
+    <script>
+        $(".btnDelete").click(function () {
+            var itemId = $(this).data("id");
+            var itemName = $(this).data("name");
+
+            Swal.fire({
+                title: 'Əminsən?',
+                text: "Geri döndərə bilməyəcəksiz!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonText: "Ləğv et",
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Bəli '
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        method: "POST",
+                        url: "/Admin/ContactUs/HardDeleteContactUs/",
+                        data: {
+                            id: itemId
+                        },
+                        success: function () {
+                            Swal.fire({
+                                title: 'Silindi!',
+                                text: "'" + itemName + "' silindi",
+                                icon: 'success',
+                                onClose: function () {
+                                    window.location.reload();
+                                }
+                            });
+                        },
+                        error: function () {
+                            Swal.fire({
+                                title: 'Xəta!',
+                                text: "Silinmə zamanı xəta baş verdi",
+                                icon: 'error'
+                            });
+                        }
+                    });
+                }
+            });
+        });
+    </script>
+}
